--- a/data/intents.yaml
+++ b/data/intents.yaml
@@ -1,7 +1,10 @@
 intents:
   - name: get_weather
-    dataset_file: 'get_weather.txt'
+    code: 0
+    dataset_file: 'data/intents/get_weather.txt'
   - name: greeting
-    dataset_file: 'greeting.txt'
+    code: 1
+    dataset_file: 'data/intents/greeting.txt'
   - name: goodbye
-    dataset_file: 'goodbye.txt'
+    code: 2
+    dataset_file: 'data/intents/goodbye.txt'
